feat(probe): add configurable complete randomized blocks and six workload families